--- a/selectors.css
+++ b/selectors.css
@@ -85,10 +85,8 @@ label{
 }
 
 /*Make all the <p>'s that are nested inside of divs 25px font(font-size: 25px)*/
-div{
-    p{
-       font-size: 25px 
-    }
+div p {
+    font-size: 25px;
 }
 
 /*Make only inputs with type 'text' have a gray background*/
@@ -97,10 +95,8 @@ input[type="text"]{
 }
 
 /* Give both <p>'s inside the 3rd <div> a pink background*/
-div:nth-of-type(3){
-    p{
+div:nth-of-type(3) p {
     background-color: pink;
-}
 }
 
 /* Give the 2nd <p> inside the 3rd <div> a 5px white border*/
